<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优悦商店</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hot_sale">热销</string>
    <string name="categories">分类</string>
    <string name="purchased">已购</string>
    <string name="upgrade">更新</string>
    <string name="search">搜索</string>
    <string name="show_all">显示全部</string>
    <string name="latest_items">最新上架</string>
    <string name="good_items">最受好评</string>
    <string name="kii_store_secure">应用安全保护</string>
    <string name="input_comment">输入评论</string>
    <string name="submit_comment">提交评论</string>
    <string name="age_cate_1">0-3岁</string>
    <string name="age_cate_2">3-6岁</string>
    <string name="age_cate_3">6-12岁</string>
    <string name="age_cate_4">12岁以上</string>
    <string name="price_free">免费</string>
    <string name="downloading_apk_prompt">正在下载</string>
    <string name="refresh">刷新</string>
    <string name="log_in_success">登录成功</string>
    <string name="download_button">下载</string>
    <string name="uninstall_button">卸载</string>
    <string name="install_button">安装</string>
    <string name="downloading_button">下载中</string>
    <string name="open_button">打开</string>
    <string name="upgrade_button">升级</string>
    <string name="resume_button">恢复下载</string>
    <string name="pause_button">暂停下载</string>
    <string name="no_purchased_apps">您还没有购买下载任何程序</string>
    <string name="purchased_not_login">您还没有登录</string>
    <string name="login_pattern">登录</string>
    <string name="no_upgrade">所有程序已是最新</string>
    <string name="title_activity_app_detail">AppDetailActivity</string>
    <string name="download_count">次下载</string>
    <string name="version_prompt">版本：</string>
    <string name="update_time">更新：</string>
    <string name="app_detail_desc">应用详情</string>
    <string name="app_upgrade_comment">更新说明</string>
    <string name="none">无</string>
    <string name="network_unavailable">网络不可用！</string>
    <string name="loading">加载中，请稍后......</string>
    <string name="invalid_iap_product">抱歉，程序内购数据错误，无法购买！</string>
    <string name="please_login">请使用优悦账户登录之后再试！</string>
    <string name="log_in">登录</string>
    <string name="settings">设置</string>
    <string name="clear_cache">清除商店缓存</string>
    <string name="about">关于</string>
    <string name="log_in_account">账号登录</string>
    <string name="log_out">账号退出</string>
    <string name="check_update">检查更新</string>
    <string name="link">官网：http://www.youwill.com.cn</string>
    <string name="weibo">微博：http://www.weibo.com/imao</string>
    <string name="wechat">微信号：youwill521</string>
    <string name="are_you_sure_to_clear_cache">确定要清除缓存吗？</string>
    <string name="choose_payment">选择支付方式</string>
    <string name="app_store_no_upgrade">没有可用更新！</string>
    <string name="app_store_has_upgrade">找到可用更新！</string>
    <string name="package_not_found">商店里没有这个应用！</string>
</resources>
