<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/transparent"
        >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bar_white_bg">
        <ImageView
                android:layout_width="36px"
                android:layout_height="36px"
                android:src="@drawable/about_close"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12px"
                android:layout_marginRight="15px"
                android:id="@+id/close"
                />
        <ImageView
                android:layout_width="144px"
                android:layout_height="64px"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32px"
                android:layout_marginBottom="48px"
                />
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:background="@drawable/bottom_bg"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:textColor="#333333"
                android:text="@string/app_name"
                android:layout_marginBottom="8px"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:textColor="#666666"
                android:text="@string/version_prompt"
                android:layout_marginBottom="22px"
                android:id="@+id/version"
                />
        <TextView
                android:layout_width="160px"
                android:layout_height="43px"
                android:text="@string/check_update"
                android:textSize="10pt"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginBottom="31px"
                android:id="@+id/check_update"
                android:background="@drawable/blue_stroke_button"
                />
        <TextView
                android:text="@string/link"
                android:id="@+id/link"
                style="@style/about_text_style"/>
        <TextView
                android:text="@string/weibo"
                android:id="@+id/weibo"
                style="@style/about_text_style"/>
        <TextView
                android:text="@string/wechat"
                android:id="@+id/weixin"
                style="@style/about_text_style"/>

    </LinearLayout>
</LinearLayout>